# ragflow-grpc-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  env-example  main.py  mock_ragflow.py  pyproject.toml  test_chunk_management.py  test_openai_apis.py  test_ragflow.py  web_ui.py
examples/: chat_assistant_example.py  example_usage.py
src/: client.py  ragflow_api.py  ragflow_pb2.py  ragflow_pb2_grpc.py  server.py
src/proto/: ragflow.proto
tests/: test_chat_assistant_management.py  test_chunk_management.py  test_document_management.py  test_openai_apis.py  test_ragflow.py  test_retrieval_apis.py  test_server.py
